# packet-pirate-platformio

./: .gitignore  .gitmodules  ir.ino  network.ino  packet-pirate-board.ino  packet-pirate.ino  platformio.ini  scan.ino  upload.ino
include/: defs.h
src/: firebase.cpp  ir.cpp  main.cpp  network.cpp  tests.cpp  upload.cpp  webserver.cpp
webserver/: README.md  pyproject.toml
webserver/webserver/: app.py  tcpserver.py
