[tool.poetry]
name = "webserver"
version = "0.1.0"
description = ""
authors = ["Devon <devon.stettler@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-firestore = "^2.13.1"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
