[tool.poetry]
name = "webserver"
version = "0.1.0"
description = ""
authors = ["Devon <devon.stettler@tutanota.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
firebase-admin = "^6.2.0"
apscheduler = "^3.10.4"
flask-socketio = "^5.3.6"
flask-sock = "^0.7.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
